--- a/admin/Client/wwwroot/index.html
+++ b/admin/Client/wwwroot/index.html
@@ -27,7 +27,13 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="d-flex justify-content-center mt-5">
+            <div class="spinner-border " style="width: 5rem; height: 5rem; margin-top:20rem" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
